--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: sans-serif;
+  line-height: 1;
 }
+
+.container{
+  width: 90%;
+  height: 80vh;
+  margin: 50px auto;
+  border: 2px solid #000;
+  border-radius: 9px;
+  padding:20px 40px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.heading-primary{
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border-bottom: 1px solid #000;
+  padding: 20px 40px;
+  font-size: 36px;
+}
+
+.bank-balance,.loan-amount{
+  text-transform: uppercase;
+  font-size: 24px;
+}
+
+.loan-amount{
+  font-size: 18px;
+}
+
+.open-account,
+.deposit,
+.withdraw,
+.req-loan,
+.pay-loan,
+.close-account{
+  padding: 5px 40px;
+  font-size: 16px;
+  border-radius: 20px;
+  transition: all .3s;
+}
+
+button:hover{
+  transform: translateY(-4px);
+  box-shadow: 0px 4px 4px rgba(0,0,0,.5);
+}
+
+button:active{
+  transform: translateY(-2px);
+  box-shadow: 0px 2px 2px rgba(0,0,0,.5);
+}
+
+
+
+/* open-account
+'deposit'
+withdraw
+req-loan
+pay-loan
+close-account */
